tests/tests/legacy_kustomizations/metadata/test_data/expected/~g_v1_service_metadata-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metadata
    app.kubernetes.io/component: metadata
    app.kubernetes.io/instance: metadata-0.2.1
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: metadata
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: 0.2.1
    kustomize.component: metadata
  name: metadata-service
  namespace: kubeflow
spec:
  ports:
  - name: backendapi
    port: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/component: metadata
    app.kubernetes.io/instance: metadata-0.2.1
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: metadata
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: 0.2.1
    component: server
    kustomize.component: metadata
  type: ClusterIP
